--- a/templates/_post.html
+++ b/templates/_post.html
@@ -3,8 +3,8 @@
     
   <div class="meta">
     <a href="{{ SITEURL }}/{{ article.url }}" class="date-icon">
-      <p class="cal-date">{{ article.date.strftime('%d') }}</p>
-    </a>            
+      {{ article.date.strftime('%d') }}
+    </a>
     <div class="date">
       <a href="{{ SITEURL }}/{{ article.url }}">{{ article.date.strftime('%b') }}</a>
     </div>
@@ -13,7 +13,7 @@
   {% endif %}
 
   <div class="text{% if article.rtl %} rtl{% endif %}">
-    <h3><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h3>
+    <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
     {{ article.content }}
   </div>
 
