I don't remember what I changed!

--- a/templates/page.html
+++ b/templates/page.html
@@ -2,6 +2,9 @@
 {% block content %}
 
 {% set article = page %}
-{% include "_post.html" %}
+
+<div class="posts">
+    {% include "_post.html" %}
+</div>
 
 {% endblock %}
